# layout-carousel-niri

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
